Added support for if then else
Todo: equals, hashcode in ABSProgramElement and subs