@@ -28,302 +28,324 @@ import de.uka.ilkd.keyabs.abs.expression.ABSNotEqExp;
 import de.uka.ilkd.keyabs.abs.expression.ABSNullExp;
 import de.uka.ilkd.keyabs.abs.expression.ABSOrBoolExp;
 
-public abstract class ABSModificationVisitor 
-extends ABSVisitorImpl
-implements IProgramASTModifyingVisitor, ABSVisitor {
+public abstract class ABSModificationVisitor extends ABSVisitorImpl implements
+        IProgramASTModifyingVisitor, ABSVisitor {
 
     protected static final Boolean CHANGED = Boolean.TRUE;
 
     boolean preservesPositionInfo = true;
 
     /**  */
-    //protected SimpleStackOfExtList stack = new SimpleStackOfExtList();
+    // protected SimpleStackOfExtList stack = new SimpleStackOfExtList();
     protected Stack<ExtList> stack = new Stack<ExtList>();
 
     public ABSModificationVisitor(ProgramElement root) {
-	super(root);
+        super(root);
     }
 
-    //@Override
+    @Override
     protected void walk(ProgramElement node) {
-	if (node instanceof SchemaVariable) {
-	    System.out.println("===>"+node);
-	}
-	ExtList l = new ExtList();
-	stack.push(l);
-	super.walk(node);
+        ExtList l = new ExtList();
+        stack.push(l);
+        super.walk(node);
     }
 
-    /* (non-Javadoc)
+    /*
+     * (non-Javadoc)
+     * 
      * @see de.uka.ilkd.keyabs.abs.IProgramASTModifyingVisitor#result()
      */
     @Override
     public ProgramElement result() {
-	ExtList result = stack.peek();
-	if (result.getFirst() == CHANGED) {
-	    result.removeFirst();
-	}
-	return (ProgramElement) result.get(0);
+        ExtList result = stack.peek();
+        if (result.getFirst() == CHANGED) {
+            result.removeFirst();
+        }
+        return (ProgramElement) result.get(0);
     }
 
     /**
      * called if the program element x is unchanged
      */
     protected void unchangedProgramElementAction(ProgramElement x) {
-	ExtList changeList = stack.peek();
-	if (changeList.size() == 0) {
-	    addChild(x);
-	    return;
-	}
-	if (changeList.getFirst() == CHANGED) {
-	    changeList.removeFirst();
-	    addChild(x);
-	    changed();
-	} else {
-	    addChild(x);
-	}
+        ExtList changeList = stack.peek();
+        if (changeList.size() == 0) {
+            addChild(x);
+            return;
+        }
+        if (changeList.getFirst() == CHANGED) {
+            changeList.removeFirst();
+            addChild(x);
+            changed();
+        } else {
+            addChild(x);
+        }
     }
 
     protected void changed() {
-	ExtList list = stack.peek();
-	if (list.isEmpty() || list.getFirst() != CHANGED) {
-	    list.addFirst(CHANGED);
-	}
+        ExtList list = stack.peek();
+        if (list.isEmpty() || list.getFirst() != CHANGED) {
+            list.addFirst(CHANGED);
+        }
     }
 
     protected void addToTopOfStack(ProgramElement x) {
-	if (x != null) {
-	    ExtList list = stack.peek();
-	    list.add(x);
-	}
+        if (x != null) {
+            ExtList list = stack.peek();
+            list.add(x);
+        }
     }
 
     protected void addChild(ProgramElement x) {
-	stack.pop();
-	addToTopOfStack(x);
+        stack.pop();
+        addToTopOfStack(x);
     }
 
     protected void addChildren(ImmutableArray<ProgramElement> arr) {
-	stack.pop();
-	for (int i = 0, sz = arr.size(); i < sz; i++) {
-	    addToTopOfStack(arr.get(i));
-	}
-    }   
+        stack.pop();
+        for (int i = 0, sz = arr.size(); i < sz; i++) {
+            addToTopOfStack(arr.get(i));
+        }
+    }
+
     protected void addNewChild(ProgramElement x) {
-	addChild(x);
-	changed();
+        addChild(x);
+        changed();
     }
 
     @Override
     public void performActionOnProgramElementName(ProgramElementName x) {
-	addChild(x);
+        addChild(x);
     }
 
     @Override
     public void performActionOnProgramMethod(IProgramMethod x) {
-	throw new RuntimeException(getClass() + ": To be implemented");
+        throw new RuntimeException(getClass() + ": To be implemented");
     }
 
     @Override
     public void performActionOnSchemaVariable(SchemaVariable x) {
-	addChild((ProgramSV) x);
+        addChild((ProgramSV) x);
     }
 
     @Override
     public void performActionOnProgramVariable(ProgramVariable x) {
-	addChild(x);
+        addChild(x);
     }
 
     @Override
     public void performActionOnLocationVariable(LocationVariable x) {
-	addChild(x);
+        addChild(x);
     }
 
     @Override
     public void performActionOnProgramConstant(ProgramConstant x) {
-	addChild(x);
+        addChild(x);
     }
 
     @Override
     public void performActionOnABSFieldReference(ABSFieldReference x) {
-	if (hasChanged()) {
-	    ExtList children = stack.peek();
-	    children.removeFirst();
-	    unchangedProgramElementAction(new ABSFieldReference((IProgramVariable) children.get(0)));
-	} else {
-	    addChild(x);
-	}
+        if (hasChanged()) {
+            ExtList children = stack.peek();
+            children.removeFirst();
+            unchangedProgramElementAction(new ABSFieldReference(
+                    (IProgramVariable) children.get(0)));
+        } else {
+            addChild(x);
+        }
     }
 
     private boolean hasChanged() {
-	return !stack.peek().isEmpty() && stack.peek().getFirst() == Boolean.TRUE;
+        return !stack.peek().isEmpty()
+                && stack.peek().getFirst() == Boolean.TRUE;
     }
 
     @Override
     public void performActionOnABSLocalVariableReference(
-	    ABSLocalVariableReference x) {
-	if (hasChanged()) {
-	    ExtList children = stack.peek();
-	    children.removeFirst();
-	    unchangedProgramElementAction(new ABSLocalVariableReference((IProgramVariable) children.get(0)));
-	} else {
-	    addChild(x);
-	}
+            ABSLocalVariableReference x) {
+        if (hasChanged()) {
+            ExtList children = stack.peek();
+            children.removeFirst();
+            unchangedProgramElementAction(new ABSLocalVariableReference(
+                    (IProgramVariable) children.get(0)));
+        } else {
+            addChild(x);
+        }
     }
 
     @Override
     public void performActionOnThisExpression(ThisExpression x) {
-	addChild(x);
+        addChild(x);
     }
 
     @Override
     public void performActionOnABSNullExp(ABSNullExp x) {
-	addChild(x);
+        addChild(x);
     }
 
     @Override
     public void performActionOnCopyAssignment(CopyAssignment x) {
-	if (hasChanged()) {
-	    ExtList children = stack.peek();
-	    children.removeFirst();
-	    unchangedProgramElementAction(new CopyAssignment((IABSLocationReference) children.get(0),
-		    (IABSPureExpression) children.get(1)));
-	} else {
-	    addChild(x);
-	}
+        if (hasChanged()) {
+            ExtList children = stack.peek();
+            children.removeFirst();
+            unchangedProgramElementAction(new CopyAssignment(
+                    (IABSLocationReference) children.get(0),
+                    (IABSPureExpression) children.get(1)));
+        } else {
+            addChild(x);
+        }
     }
 
     @Override
     public void performActionOnABSAddExp(ABSAddExp x) {
-	if (hasChanged()) {
-	    ExtList children = stack.peek();
-	    children.removeFirst();
-	    unchangedProgramElementAction(new ABSAddExp((IABSPureExpression) children.get(0), (IABSPureExpression) children.get(1)));
-	} else {
-	    addChild(x);
-	}
+        if (hasChanged()) {
+            ExtList children = stack.peek();
+            children.removeFirst();
+            unchangedProgramElementAction(new ABSAddExp(
+                    (IABSPureExpression) children.get(0),
+                    (IABSPureExpression) children.get(1)));
+        } else {
+            addChild(x);
+        }
     }
 
     @Override
     public void performActionOnABSMultExp(ABSMultExp x) {
-	if (hasChanged()) {
-	    ExtList children = stack.peek();
-	    children.removeFirst();
-	    unchangedProgramElementAction(new ABSMultExp((IABSPureExpression) children.get(0), (IABSPureExpression) children.get(1)));
-	} else {
-	    addChild(x);
-	}
+        if (hasChanged()) {
+            ExtList children = stack.peek();
+            children.removeFirst();
+            unchangedProgramElementAction(new ABSMultExp(
+                    (IABSPureExpression) children.get(0),
+                    (IABSPureExpression) children.get(1)));
+        } else {
+            addChild(x);
+        }
     }
 
     @Override
     public void performActionOnABSOrBoolExp(ABSOrBoolExp x) {
-	if (hasChanged()) {
-	    ExtList children = stack.peek();
-	    children.removeFirst();
-	    unchangedProgramElementAction(new ABSOrBoolExp((IABSPureExpression) children.get(0), (IABSPureExpression) children.get(1)));
-	} else {
-	    addChild(x);
-	}
+        if (hasChanged()) {
+            ExtList children = stack.peek();
+            children.removeFirst();
+            unchangedProgramElementAction(new ABSOrBoolExp(
+                    (IABSPureExpression) children.get(0),
+                    (IABSPureExpression) children.get(1)));
+        } else {
+            addChild(x);
+        }
     }
 
     @Override
     public void performActionOnABSAndBoolExp(ABSAndBoolExp x) {
-	if (hasChanged()) {
-	    ExtList children = stack.peek();
-	    children.removeFirst();
-	    unchangedProgramElementAction(new ABSAndBoolExp((IABSPureExpression) children.get(0), (IABSPureExpression) children.get(1)));
-	} else {
-	    addChild(x);
-	}
+        if (hasChanged()) {
+            ExtList children = stack.peek();
+            children.removeFirst();
+            unchangedProgramElementAction(new ABSAndBoolExp(
+                    (IABSPureExpression) children.get(0),
+                    (IABSPureExpression) children.get(1)));
+        } else {
+            addChild(x);
+        }
     }
 
     @Override
     public void performActionABSStatementBlock(ABSStatementBlock x) {
-	if (hasChanged()) {
-	    ExtList children = stack.peek();
-	    children.removeFirst();
-	    final IABSStatement[] body = new IABSStatement[children.size()];
-	    for (int i = 0; i<children.size(); i++) {
-		body[i] = (IABSStatement) children.get(i);
-	    }
-	    unchangedProgramElementAction(new ABSStatementBlock(body));
-	} else {
-	    addChild(x);
-	}
+        if (hasChanged()) {
+            ExtList children = stack.peek();
+            children.removeFirst();
+            final IABSStatement[] body = new IABSStatement[children.size()];
+            for (int i = 0; i < children.size(); i++) {
+                body[i] = (IABSStatement) children.get(i);
+            }
+            unchangedProgramElementAction(new ABSStatementBlock(body));
+        } else {
+            addChild(x);
+        }
     }
 
     @Override
     public void performActionOnProgramMetaConstruct(
-	    ProgramTransformer<ABSServices> x) {
-	//
+            ProgramTransformer<ABSServices> x) {
+        //
     }
 
     @Override
     public void performActionOnABSTypeReference(ABSTypeReference x) {
-	if (hasChanged()) {
-	    // should not be called
-	    assert false;
-	    ExtList children = stack.peek();
-	    children.removeFirst();
-	    unchangedProgramElementAction(x);
-	} else {
-	    addChild(x);
-	}
+        if (hasChanged()) {
+            // should not be called
+            assert false;
+            ExtList children = stack.peek();
+            children.removeFirst();
+            unchangedProgramElementAction(x);
+        } else {
+            addChild(x);
+        }
     }
 
     @Override
     public void performActionOnABSVariableDeclarationStatement(
-	    ABSVariableDeclarationStatement x) {
-	if (hasChanged()) {
-	    ExtList children = stack.peek();
-	    children.removeFirst();
-	    ABSTypeReference typeRef = children.removeFirstOccurrence(ABSTypeReference.class);
-	    IProgramVariable var = children.removeFirstOccurrence(IProgramVariable.class);
-	    IABSExpression exp = children.removeFirstOccurrence(IABSExpression.class);
-	    unchangedProgramElementAction(new ABSVariableDeclarationStatement(typeRef, var, exp));
-	} else {
-	    addChild(x);
-	}
+            ABSVariableDeclarationStatement x) {
+        if (hasChanged()) {
+            ExtList children = stack.peek();
+            children.removeFirst();
+            ABSTypeReference typeRef = children
+                    .removeFirstOccurrence(ABSTypeReference.class);
+            IProgramVariable var = children
+                    .removeFirstOccurrence(IProgramVariable.class);
+            IABSExpression exp = children
+                    .removeFirstOccurrence(IABSExpression.class);
+            unchangedProgramElementAction(new ABSVariableDeclarationStatement(
+                    typeRef, var, exp));
+        } else {
+            addChild(x);
+        }
     }
 
     @Override
     public void performActionOnABSAsyncMethodCall(ABSAsyncMethodCall x) {
-	if (hasChanged()) {
-	    ExtList children = stack.peek();
-	    children.removeFirst();
-	    IABSPureExpression caller = children.removeFirstOccurrence(IABSPureExpression.class);
-	    ProgramElementName methodName = children.removeFirstOccurrence(ProgramElementName.class);
+        if (hasChanged()) {
+            ExtList children = stack.peek();
+            children.removeFirst();
+            IABSPureExpression caller = children
+                    .removeFirstOccurrence(IABSPureExpression.class);
+            ProgramElementName methodName = children
+                    .removeFirstOccurrence(ProgramElementName.class);
 
-	    IABSPureExpression[] arguments = new IABSPureExpression[children.size()];
-	    for (int i = 0; i<children.size(); i++) {
-		arguments[i] = (IABSPureExpression) children.get(i);
-	    }
-	    unchangedProgramElementAction(new ABSAsyncMethodCall(caller, methodName, arguments));
-	} else {
-	    addChild(x);
-	}		
+            IABSPureExpression[] arguments = new IABSPureExpression[children
+                    .size()];
+            for (int i = 0; i < children.size(); i++) {
+                arguments[i] = (IABSPureExpression) children.get(i);
+            }
+            unchangedProgramElementAction(new ABSAsyncMethodCall(caller,
+                    methodName, arguments));
+        } else {
+            addChild(x);
+        }
     }
 
     @Override
     public void performActionOnABSDataConstructorExp(ABSDataConstructorExp x) {
-	if (hasChanged()) {
-	    ExtList children = stack.peek();
-	    children.removeFirst();
-	    ProgramElementName constructor = children.removeFirstOccurrence(ProgramElementName.class);
+        if (hasChanged()) {
+            ExtList children = stack.peek();
+            children.removeFirst();
+            ProgramElementName constructor = children
+                    .removeFirstOccurrence(ProgramElementName.class);
 
-	    IABSPureExpression[] arguments = new IABSPureExpression[children.size()];
-	    for (int i = 0; i<children.size(); i++) {
-		arguments[i] = (IABSPureExpression) children.get(i);
-	    }
-	    unchangedProgramElementAction(new ABSDataConstructorExp(constructor, arguments));
-	} else {
-	    addChild(x);
-	}		
+            IABSPureExpression[] arguments = new IABSPureExpression[children
+                    .size()];
+            for (int i = 0; i < children.size(); i++) {
+                arguments[i] = (IABSPureExpression) children.get(i);
+            }
+            unchangedProgramElementAction(new ABSDataConstructorExp(
+                    constructor, arguments));
+        } else {
+            addChild(x);
+        }
     }
 
     @Override
     public void performActionOnABSIntLiteral(ABSIntLiteral x) {
-	addChild(x);
+        addChild(x);
     }
 
     @Override
@@ -331,7 +353,9 @@ implements IProgramASTModifyingVisitor, ABSVisitor {
         if (hasChanged()) {
             ExtList children = stack.peek();
             children.removeFirst();
-            unchangedProgramElementAction(new ABSEqExp((IABSPureExpression) children.get(0), (IABSPureExpression) children.get(1)));
+            unchangedProgramElementAction(new ABSEqExp(
+                    (IABSPureExpression) children.get(0),
+                    (IABSPureExpression) children.get(1)));
         } else {
             addChild(x);
         }
@@ -342,7 +366,9 @@ implements IProgramASTModifyingVisitor, ABSVisitor {
         if (hasChanged()) {
             ExtList children = stack.peek();
             children.removeFirst();
-            unchangedProgramElementAction(new ABSNotEqExp((IABSPureExpression) children.get(0), (IABSPureExpression) children.get(1)));
+            unchangedProgramElementAction(new ABSNotEqExp(
+                    (IABSPureExpression) children.get(0),
+                    (IABSPureExpression) children.get(1)));
         } else {
             addChild(x);
         }
@@ -353,7 +379,9 @@ implements IProgramASTModifyingVisitor, ABSVisitor {
         if (hasChanged()) {
             ExtList children = stack.peek();
             children.removeFirst();
-            unchangedProgramElementAction(new ABSGEQExp((IABSPureExpression) children.get(0), (IABSPureExpression) children.get(1)));
+            unchangedProgramElementAction(new ABSGEQExp(
+                    (IABSPureExpression) children.get(0),
+                    (IABSPureExpression) children.get(1)));
         } else {
             addChild(x);
         }
@@ -364,7 +392,9 @@ implements IProgramASTModifyingVisitor, ABSVisitor {
         if (hasChanged()) {
             ExtList children = stack.peek();
             children.removeFirst();
-            unchangedProgramElementAction(new ABSLTExp((IABSPureExpression) children.get(0), (IABSPureExpression) children.get(1)));
+            unchangedProgramElementAction(new ABSLTExp(
+                    (IABSPureExpression) children.get(0),
+                    (IABSPureExpression) children.get(1)));
         } else {
             addChild(x);
         }
@@ -375,7 +405,9 @@ implements IProgramASTModifyingVisitor, ABSVisitor {
         if (hasChanged()) {
             ExtList children = stack.peek();
             children.removeFirst();
-            unchangedProgramElementAction(new ABSLEQExp((IABSPureExpression) children.get(0), (IABSPureExpression) children.get(1)));
+            unchangedProgramElementAction(new ABSLEQExp(
+                    (IABSPureExpression) children.get(0),
+                    (IABSPureExpression) children.get(1)));
         } else {
             addChild(x);
         }
@@ -386,7 +418,24 @@ implements IProgramASTModifyingVisitor, ABSVisitor {
         if (hasChanged()) {
             ExtList children = stack.peek();
             children.removeFirst();
-            unchangedProgramElementAction(new ABSGTExp((IABSPureExpression) children.get(0), (IABSPureExpression) children.get(1)));
+            unchangedProgramElementAction(new ABSGTExp(
+                    (IABSPureExpression) children.get(0),
+                    (IABSPureExpression) children.get(1)));
+        } else {
+            addChild(x);
+        }
+    }
+
+    @Override
+    public void performActionOnABSIfStatement(ABSIfStatement x) {
+        if (hasChanged()) {
+            ExtList children = stack.peek();
+            children.removeFirst();
+            unchangedProgramElementAction(new ABSIfStatement(
+                    (IABSPureExpression) children.get(0),
+                    (IABSStatement) children.get(1),
+                    children.size() >= 3 ? (IABSStatement) children.get(2)
+                            : null));
         } else {
             addChild(x);
         }
